fix align items

--- a/src/sass/_base.divider.scss
+++ b/src/sass/_base.divider.scss
@@ -1,7 +1,7 @@
 .divider {
 	background: $colorSeparator;
 	height: 10px;
-	margin: 30px 0 50px;
+	margin: 30px 0 50px 0 !important;
 	display: block;
 
 	&--little { width: 90px }
